fix future date card wrapping

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,6 +23,10 @@
     margin: 10px 0 17px 0;
 }
 
+#left-column {
+    margin-bottom: 40px;
+}
+
 #current-weather {
     margin-top: -20px;
 }
